--- a/src/main/resources/static/css/slider.css
+++ b/src/main/resources/static/css/slider.css
@@ -1,6 +1,9 @@
 html, body {
 	position: relative;
 	height: 100%;
+	font-family: Arial, sans-serif;
+	margin: 0;
+	padding: 0;
 }
 
 .swiper {
@@ -26,14 +29,27 @@ html, body {
 
 /* CUSTOM CSS */
 .poster img {
-    width: 70rem;
-    height: 40rem;
-    margin: 0 auto;
+	width: 50rem;
+	height: 30rem;
+	margin: 0 auto;
 }
 
 .movie-details {
-    position: relative;
-    bottom: 12rem;
-    left: 20rem;
-    color: white;
+	position: relative;
+	bottom: 12rem;
+	left: 20rem;
+	color: white;
+}
+
+.swiper-button-prev, .swiper-button-next {
+	color: white !important;
+	border: 1px solid gray;
+	border-radius: 50%;
+	width: 3rem !important;
+	height: 3rem !important;
+	background: #999;
+}
+
+.swiper-button-prev:after, .swiper-button-next:after {
+	font-size: 30px !important;
 }
