--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -83,10 +83,20 @@
 		var swiper = new Swiper(".mySwiper", {
 			loop : true,
 			spaceBetween : 30,
+			slidesPerView : 3,
+			centeredSlides: true,
 			navigation : {
 				nextEl : ".swiper-button-next",
 				prevEl : ".swiper-button-prev",
 			},
+			effect : "coverflow",
+			coverflowEffect: {
+		        rotate: 0,
+		        stretch: 0,
+		        depth: 100,
+		        modifier: 1,
+		        slideShadows: false,
+		      },
 		});
 	</script>
 </body>
