--- a/src/main/resources/templates/add-movie.html
+++ b/src/main/resources/templates/add-movie.html
@@ -69,6 +69,10 @@ h2 {
 			enctype="multipart/form-data">
 			<h2 class="mb-4">Add Movie</h2>
 			<div class="form-check">
+				<label for="category" class="form-label">Category</label> <input
+					type="text" class="form-control" id="category" name="category" required>
+			</div>
+			<div class="form-check">
 				<label for="name" class="form-label">Movie Name</label> <input
 					type="text" class="form-control" id="name" name="name" required>
 			</div>
