--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -17,7 +17,7 @@
 			</th:block>
 			
 			<th:block th:if="${session.customer}">
-				<a class="nav-link" href="/login">Movies</a> 
+				<a class="nav-link" href="/movies">Movies</a> 
 			<a class="nav-link" href="/customer/history">History</a> 
 			</th:block>
 			
