--- a/src/main/resources/static/css/slider.css
+++ b/src/main/resources/static/css/slider.css
@@ -8,7 +8,7 @@ html, body {
 
 .swiper {
 	width: 100%;
-	height: 100%;
+	height: 95vh;
 }
 
 .swiper-slide {
@@ -24,21 +24,9 @@ html, body {
 	display: block;
 	width: 100%;
 	height: 100%;
-	object-fit: cover;
-}
-
-/* CUSTOM CSS */
-.poster img {
-	width: 50rem;
-	height: 30rem;
-	margin: 0 auto;
-}
-
-.movie-details {
-	position: relative;
-	bottom: 12rem;
-	left: 20rem;
-	color: white;
+    padding: 60px 10px;
+    object-fit: cover;
+    border-radius: 10%;
 }
 
 .swiper-button-prev, .swiper-button-next {
@@ -52,4 +40,39 @@ html, body {
 
 .swiper-button-prev:after, .swiper-button-next:after {
 	font-size: 30px !important;
+}
+
+/* 2nd SECTION CSS */
+/* Custom styles for the Swiper slider */
+
+#music-slider .musicSwiper {
+  background: white;
+  padding: 5rem 3rem;
+  width: 100%;
+  border-radius: 50px;
+}
+
+.musicSwiper {
+	width: 100%;
+	height: 100%;
+}
+
+#music-slider .swiper-slide {
+	text-align: center;
+	font-size: 18px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+#music-slider .swiper-slide img {
+	display: block;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+/* Swiper-specific styles */
+.swiper-slide {
+    height: auto;
 }
