--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -33,11 +33,12 @@
         }
         .form-control {
             width: 100%;
-            padding: 10px;
             border: 1px solid #ffffff;
             border-radius: 4px;
             box-sizing: border-box;
             background-color: rgba(255, 255, 255, 0.9);
+            border-bottom: 1px solid;
+			margin-bottom: 10px;
         }
         .form-control:focus {
             outline: none;
