--- a/src/main/resources/templates/add-movie.html
+++ b/src/main/resources/templates/add-movie.html
@@ -70,7 +70,7 @@ h2 {
 			<h2 class="mb-4">Add Movie</h2>
 			<div class="form-check">
 				<label for="category" class="form-label">Category</label> <input
-					type="text" class="form-control" id="category" name="category" required>
+					type="text" class="form-control" id="category" name="category" placeholder="Ex. Movie, Music, Comedy" required>
 			</div>
 			<div class="form-check">
 				<label for="name" class="form-label">Movie Name</label> <input
