--- a/src/main/resources/templates/seat-selection.html
+++ b/src/main/resources/templates/seat-selection.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <th:block th:insert="~{fragments/navbar}"></th:block>
+<th:block th:insert="~{fragments/message}"></th:block>
 	<main class="container">
       <h1 class="text-center mb-4">Seat Selection</h1>
       <div class="row">
