--- a/src/main/resources/static/css/nav-foot.css
+++ b/src/main/resources/static/css/nav-foot.css
@@ -9,8 +9,8 @@ body {
 	margin: 0;
 	font-family: Arial, sans-serif;
 	background-color: #141414;
-	height: 100vh;
 	font-family: Arial, sans-serif;
+	height:100%;
 	margin: 0;
 	padding: 0;
 }
@@ -21,6 +21,10 @@ body {
 	justify-content: space-between;
 	align-items: center;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+	position: sticky;
+	top: 0;
+	z-index: 69;
+	background-color: #141414;
 }
 
 .left-nav {
