--- a/src/main/resources/static/css/slider.css
+++ b/src/main/resources/static/css/slider.css
@@ -1,6 +1,5 @@
 html, body {
 	position: relative;
-	height: 100%;
 	font-family: Arial, sans-serif;
 	margin: 0;
 	padding: 0;
@@ -20,7 +19,7 @@ html, body {
 	align-items: center;
 }
 
-.swiper-slide img {
+#recom-slider .swiper-slide img {
 	display: block;
 	width: 100%;
 	height: 100%;
@@ -47,7 +46,7 @@ html, body {
 
 #music-slider .musicSwiper {
   background: white;
-  padding: 5rem 3rem;
+  padding: 3rem 3rem;
   width: 100%;
   border-radius: 50px;
 }
@@ -63,13 +62,18 @@ html, body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	width: 25rem !important;
+	
 }
 
 #music-slider .swiper-slide img {
 	display: block;
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
+	width: 80%;
+	height: 30rem;
+    object-fit: cover;
+    padding: 20px;
+    margin: 0 auto;
+    border-radius: 30px;
 }
 
 /* Swiper-specific styles */
