--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -85,13 +85,14 @@ section h1 {
     font-size: 2.5rem;
     color: #ffffff;
     text-align: center;
-    margin-bottom: 50px;
     position: relative;
+    margin: 30px auto;
+    width: 30%;
 }
 
 #music-slider h1{
 	width: 30%;
-  	margin: 50px auto;
+    margin: 0 auto 40px;
 }
 
 section h1:hover{
@@ -220,7 +221,7 @@ section h1::after {
 		<h1 th:if="${!movies.isEmpty()}">Recommended Movies</h1>
 		<div class="swiper mySwiper">
 			<div class="swiper-wrapper">
-				<div class="swiper-slide" th:each="movie, iterStat : ${movies}" th:if="${movie.getCategory() == 'Movie'}">
+				<div class="swiper-slide" th:each="movie : ${movies}" th:if="${movie.getCategory() == 'Movie'}">
 					<div class="poster">
 						<div class="poster-img">
 							<img alt=""
@@ -240,19 +241,19 @@ section h1::after {
 	</section>
 
 	<section id="music-slider">
-	<h1>Music Studio</h1>
+	<h1 th:if="${!movies.isEmpty()}">Music Studio</h1>
 		<div class="swiper musicSwiper">
 			<div class="swiper-wrapper">
-				<div class="swiper-slide music-slide">
+				<div class="swiper-slide music-slide" th:each="music : ${movies}" th:if="${music.getCategory() == 'Music'}">
 					<div class="music_poster">
 						<div class="music-poster-img">
 							<img alt=""
-								src="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:w-400.0,h-660.0,cm-pad_resize,bg-000000,fo-top:l-text,ie-U2F0LCAxOSBPY3Q%3D,fs-29,co-FFFFFF,ly-612,lx-24,pa-8_0_0_0,l-end/et00394928-leqbwdbpxy-portrait.jpg" />
+								th:src="${music.moviePoster}" />
 						</div>
 						<div class="music-details">
-							<h2>Sunburn Arena Ft. Alan Walker - Mumbai</h2>
-							<h3>R2 Grounds, MMRDA: Mumbai</h3>
-							<h3>Concerts</h3>
+							<h2 th:text="${music.description}"></h2>
+							<h3 th:if="${music.cast}"></h3>
+							<h3 th:if="${music.genre}"></h3>
 						</div>
 					</div>
 				</div>
@@ -367,7 +368,7 @@ section h1::after {
 		});
 
 		var musicSwiper = new Swiper(".musicSwiper", {
-			slidesPerView : 3,
+			slidesPerView : 4,
 			spaceBetween : 30,
 			loop: true,
 			freeMode : true,
